--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
     // Hilt Dependency Injection
     implementation "com.google.dagger:hilt-android:2.37"
-    kapt "com.google.dagger:hilt-compiler:2.32-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.37"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
